Added full sprint3, created facade jar, TODO: fix facade jar activation